# fastapi-funasr

./: .env  .gitignore  README.md  ai提示词.md  config.yaml  main.py  pyproject.toml
.trae/rules/: project_rules.md
examples/asr/: static.py  test_asr_client.py
examples/kws/: kws_test.py
examples/vad/: test_vad_direct.py
processed_audio/: 4-8s.m4a  test_file.py  test_vad_direct.py
src/: __init__.py
src/common/: __init__.py  global_config.py  states.py
src/config/: __init__.py  config_manager.py
src/middleware/: __init__.py  authentication.py  error_handling.py  ip_whitelist.py  logging.py  middleware_manager.py
src/routes/: __init__.py  funasr.py  recognition.py  session.py  test.py  test_asr.py  test_kws.py  test_vad.py
src/services/: __init__.py  asr.py  base_model_service.py  event_handler.py  kws.py  session_handler.py  state_machine.py  vad.py  vad_stream.py
src/services/asr/: __init__.py  core.py  streaming.py
src/services/kws/: __init__.py  core.py  streaming.py
src/services/vad/: __init__.py  audio_buffer.py  core.py  session.py  session_handler.py  state_machine.py  stream.py  streaming.py
src/utils/: __init__.py  audio_buffer.py  audio_converter.py  audio_debug.py  audio_session_recorder.py  logger.py  resolve_device.py  simple_voice_activity.py
static/: asr.html  index.html  kws.html  phone.html  processor.js  vad.html
tests/: kws_test.py
tests/outputs/debug/: detect
